--- a/css/global.css
+++ b/css/global.css
@@ -388,9 +388,17 @@ hr {
   margin-bottom: 1.2rem;
 }
 
+.footer__partner a {
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+}
+
 .footer__partner-logo {
   max-width: 160px;
   max-height: 60px;
+  display: block;
+  margin: 0 auto;
   opacity: 0.65;
   filter: brightness(0.95);
   transition: opacity 0.3s ease;
