--- a/css/global.css
+++ b/css/global.css
@@ -373,8 +373,8 @@ hr {
 
 .footer__partner {
   text-align: center;
-  padding-bottom: 2.5rem;
-  margin-bottom: 2rem;
+  padding: 1rem 0 3rem;
+  margin-bottom: 3rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.03);
 }
 
